--- a/wiki/00_디렉터리_구조.md
+++ b/wiki/00_디렉터리_구조.md
@@ -15,6 +15,15 @@ SportsInfo
     ├── db # db 관련 코드들
     ├── process # 데이터 가공과 관련된 코드들
     └── wiki # wiki 문서
-        └── 디렉터리_구조.md
+        └── 00.디렉터리_구조.md
 ```
 
+### wiki 문서 이름 규칙
+* wiki 문서는 앞에 문서 번호를 붙이며 문서 번호는 각 프로그램 실행 단계의 순서와 관련이 있다.
+```bash
+# 예시
+00_디렉터리_구조.md
+01_프로젝트_전체개요.md
+02_수집.md
+...
+``` 
